--- a/examples/sample.html
+++ b/examples/sample.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
-<html ng-app>
+<html ng-app="my">
 
   <head>
-    <script data-require="angular.js@*" data-semver="1.4.0-beta.2" src="https://code.angularjs.org/1.4.0-beta.2/angular.js"></script>
+    <script data-require="angular.js@*" data-semver="1.4.0-beta.2" src="https://code.angularjs.org/1.4.0-beta.6/angular.js"></script>
+    <script type="text/javascript">
+      angular.module('my', ['ngLocale']);
+    </script>
     <style>
       .red {color:red};
     </style>
   </head>
 
   <body>
-    <h1>Hello Angular</h1>
-
-    <p>Please fill out <b>Email</b> and <b>Name</b> fields</p>
-    <p>Why is name not shown?</p>
+    <a href="sample.html">Simple</a>
+    |
+    <a href="dependencies.html">Dependencies</a>
+    |
+    <a href="routes.html">Routes: ngRoute</a>
+    <hr>
+    <h1>Ng-Bar</h1>
+    <h2>Example: Simple app</h2>
 
 
     <form name="myForm">
@@ -33,7 +40,7 @@
       <ol ng-init="items = ['one', 'two', 'three']">
         <li ng-repeat="name in items">{{name}}</li>
       </ol>
-      <a ng-click="items.push(items.length);">Add more</a>
+      <a ng-click="items.push(items.length);">Add more scopes</a>
     </div>
 
     <div>
