Ui-routes example page added

--- a/examples/routes.html
+++ b/examples/routes.html
@@ -99,6 +99,8 @@
     <a href="/examples/dependencies.html" target="_self">Dependencies</a>
     |
     <a href="/examples/routes.html" target="_self">Routes: ngRoute</a>
+    |
+    <a href="/examples/ui-router.html" target="_self">Routes: ui.router</a>
     <hr>
     <h1>Ng-Bar</h1>
     <h2>Example: ngRoute</h2>
