--- a/examples/sample.html
+++ b/examples/sample.html
@@ -17,6 +17,8 @@
     <a href="dependencies.html">Dependencies</a>
     |
     <a href="routes.html">Routes: ngRoute</a>
+    |
+    <a href="/examples/ui-router.html" target="_self">Routes: ui.router</a>
     <hr>
     <h1>Ng-Bar</h1>
     <h2>Example: Simple app</h2>
